--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
     	
-            <li class=active> <a href="/welcome.html">Welcome</a></li>
+            <li class=active> <a href="/index.html">Welcome</a></li>
 		
             <li class=> <a href="/find_us.html">Find Us</a></li>
 		
