- added in correct gallery

--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -81,7 +81,16 @@
       <div class="row">
 		<h1>Photos from 2013</h1>
 
-<p>Here be photos....</p>
+<p><div id="plusgallery" data-type="google" data-album-limit="1000" data-userid="102149140573094062350" data-include="5981524214776040337" data-credit="false"></div>
+<script type="text/javascript">
+$(function(){
+    //DOM loaded
+    	$('#plusgallery').plusGallery();
+});</script>
+
+</p>
+
+<hr />
 
       </div>
 	  <br>
