--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
   $(document).ready(function() { 
       $('#carousel1').carousel({ interval: 3500, cycle: true });
   }); 
+  $("#carousel1").hover(
+    function(){
+        $(".carousel-control.left").fadeIn(500);
+        $(".carousel-control.right").fadeIn(500);
+        $(".carousel-indicators").fadeIn(500);
+    }, function(){
+        $(".carousel-control.left").fadeOut(500);
+        $(".carousel-control.right").fadeOut(500);
+        $(".carousel-indicators").fadeOut(500);
+    }
+   );
 </script>
 
 </div>
