- add social icon buttons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link href="/assets/stylesheets/navbar-fixed-top.css" rel="stylesheet">
   <link href="/assets/stylesheets/plusgallery.css" rel="stylesheet">
   <link href="/assets/stylesheets/pygment_trac.css" rel="stylesheet">
+  <link href="/assets/stylesheets/social-buttons.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
   <!--- so much depends on jQuery, that we do i here first -->
@@ -199,6 +200,20 @@
 
 <p>Get involved with CruZionsville!</p>
 
+			<div class="row">
+				
+<div>
+	<div class="twitter-hover social-slide"></div>
+	<div class="facebook-hover social-slide"></div>
+	<div class="google-hover social-slide"></div>
+	<div class="linkedin-hover social-slide"></div>
+	<div class="pinterest-hover social-slide"></div>
+	<div class="instagram-hover social-slide"></div>
+	<div class="tumblr-hover social-slide"></div>
+	<div class="reddit-hover social-slide"></div>
+	<div class="stumbleupon-hover social-slide"></div>
+</div>
+			</div>
 		</div>
 	</div>
 </div>
