- added social share buttons

--- a/find_us.html
+++ b/find_us.html
@@ -20,6 +20,8 @@
   <link href="/assets/stylesheets/social-buttons.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href="/assets/stylesheets/carousel-fade.css" rel="stylesheet">
+  <link href="/assets/stylesheets/site.css" rel="stylesheet">
+  <link href="/assets/stylesheets/zocial/zocial.css" rel="stylesheet">
 
   <!--- so much depends on jQuery, that we do i here first -->
   <script src="/assets/javascripts/jquery-1.10.2.min.js"></script>
@@ -70,6 +72,10 @@
 		
             <li class=> <a href="/faq.html">FAQ</a></li>
 		
+            <li class=> <a href="/registration.html">Registration</a></li>
+		
+            <li class=> <a href="/sponsors.html">Sponsors</a></li>
+		
             <li class=> <a href="/postings.html">News</a></li>
 		
       </ul>
@@ -80,8 +86,7 @@
 
     <div class="container">
      <!-- Main component for a primary marketing message or call to action -->
-      <div class="row">
-		<h2>Breakfast and Staging Area</h2>
+	  <h2>Breakfast and Staging Area</h2>
 
 <p>The breakfast and staging area is located at Zionsville Meadows.  The Meadows is located at:</p>
 
@@ -97,7 +102,6 @@
 
 <iframe width="640" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=200+S+Main+St,+Zionsville,+IN&amp;aq=0&amp;oq=200+S+Main&amp;sll=39.944358,-86.277287&amp;sspn=0.015382,0.021865&amp;gl=us&amp;ie=UTF8&amp;hq=&amp;hnear=200+S+Main+St,+Zionsville,+Indiana+46077&amp;t=m&amp;ll=39.949918,-86.261451&amp;spn=0.007896,0.013733&amp;z=16&amp;iwloc=A&amp;output=embed"></iframe>
 
-      </div>
 	  <br>
 <br>
 <br>
@@ -123,7 +127,7 @@
 <script src="/assets/javascripts/jqBootstrapValidation.js"></script>
 <script src="/assets/javascripts/contact_me.js"></script>
 <script src="/assets/javascripts/plusgallery.js"></script>
-<script src="/assets/javascripts/live.js"></script>
-
+<!--<script src="/assets/javascripts/live.js"></script>
+-->
   </body>
 </html>
