--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link href="/assets/stylesheets/social-buttons.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href="/assets/stylesheets/carousel-fade.css" rel="stylesheet">
+  <link href="/assets/stylesheets/site.css" rel="stylesheet">
+  <link href="/assets/stylesheets/zocial/zocial.css" rel="stylesheet">
 
   <!--- so much depends on jQuery, that we do i here first -->
   <script src="/assets/javascripts/jquery-1.10.2.min.js"></script>
@@ -70,6 +72,10 @@
 		
             <li class=> <a href="/faq.html">FAQ</a></li>
 		
+            <li class=> <a href="/registration.html">Registration</a></li>
+		
+            <li class=> <a href="/sponsors.html">Sponsors</a></li>
+		
             <li class=> <a href="/postings.html">News</a></li>
 		
       </ul>
@@ -80,8 +86,9 @@
 
     <div class="container">
      <!-- Main component for a primary marketing message or call to action -->
-      <div class="row">
-		
+	  
+<a href="http://www.facebook.com/sharer/sharer.php?u=https://www.facebook.com/CruZionsville">Share on Facebook</a>
+
 <div class="row">
 <div id="carousel1" class="carousel slide carousel-fade">
   <!-- Indicators-->
@@ -162,7 +169,7 @@
 	<div class="col-md-6">
 		<p>Join Club members, friends and volunteers of the Central Indiana Region Porsche Club of America for an exciting one day event on the “Brick Street" in downtown Zionsville Saturday, June 14th. We anticipate having over 100 Porsche cars at our 3rd annual event. Bring your car, see old friends and meet new ones, listen to music, attend free seminars, shop and don’t miss your chance to bring home a CruZionsville trophy! We have added more great Sponsors this year and proceeds from the event go to the Alzheimer's Association - Greater Indiana Chapter.</p>
 
-<p>Early bird registration is only $30 per car until June 7th. We will have VIP parking and registration this year at $100 with all proceeds going to the Alzheimer's Association - Greater Indiana Chapter. Our goal for the 2013 Event is to raise $25,000!</p>
+<p>Early bird registration is only $30 per car until June 7th. We will have VIP parking and registration this year at $100 with all proceeds going to the Alzheimer's Association - Greater Indiana Chapter. Our goal for the 2014 Event is to raise $25,000!</p>
 
 <p>At 10:00 am cars will leave the staging area via Police escort to downtown Zionsville. Our show has gotten so big that we will now be using two blocks along Main Street for plenty of room for the cars. Its shine and show judging with some really cool new trophies this year. To add to the fun, we have added more judging categories. Bring your car and be a part of the excitement.</p>
 
@@ -181,40 +188,34 @@
 		<div class="text-center center-block">
 			<h3>Registration</h3>
 
-<img  class="img-responsive center-block"  src="/content/buttons/registration.jpg"  >
+<a href="http://www.cruzionsville.com/registration" target="_blank"><img  class="img-responsive center-block"  src="/content/buttons/registration.jpg"  ></a>
 
 <h3>Make A Difference</h3>
 
-<img  class="img-responsive center-block"  src="/content/buttons/donate.jpg"  >
+<a href="http://act.alz.org/goto/cruzionsville" target="_blank"><img  class="img-responsive center-block"  src="/content/buttons/donate.jpg"  ></a>
 
 <p>Donate now!</p>
 
 <h3>Find Us On Facebook</h3>
 
-<img  class="img-responsive center-block"  src="/content/buttons/facebook.jpg"  >
+<a href="http://www.facebook.com/CruZionsville" target="_blank"><img  class="img-responsive center-block"  src="/content/buttons/facebook.jpg"  ></a>
 
 <p>Share with your friends!</p>
 
 <h3>Volunteers Needed!</h3>
 
-<img  class="img-responsive center-block"  src="/content/buttons/volunteer.jpg"  >
+<a href="http://cruzionsville.ivolunteer.com/" target="_blank"><img  class="img-responsive center-block"  src="/content/buttons/volunteer.jpg"  ></a>
 
 <p>Get involved with CruZionsville!</p>
 
-			<div class="row">
-				
-<div>
-	<div class="twitter-hover social-slide"></div>
-	<div class="facebook-hover social-slide"></div>
-	<div class="google-hover social-slide"></div>
-	<div class="linkedin-hover social-slide"></div>
-	<div class="pinterest-hover social-slide"></div>
-	<div class="instagram-hover social-slide"></div>
-	<div class="tumblr-hover social-slide"></div>
-	<div class="reddit-hover social-slide"></div>
-	<div class="stumbleupon-hover social-slide"></div>
-</div>
-			</div>
+			<br>
+			<br>
+			
+
+<a href="http://www.facebook.com/sharer/sharer.php?u=https://www.cruzionsville.com" class="zocial facebook">Share on Facebook</a><br><br>
+<a href="https://plus.google.com/share?url=https://www.cruzionsville.com" class="zocial googleplus">Share on Google+</a><br><br>
+<a href="http://twitter.com/home?status=https://www.cruzionsville.com" class="zocial twitter">Share on Twitter</a><br><br>
+
 		</div>
 	</div>
 </div>
@@ -224,7 +225,22 @@
 
 <hr />
 
-      </div>
+
+<br>
+<div class="row">
+	<div class="col-md-4">
+		<a href="http://www.discounttire.com/dtcs/home.do" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/discounttire.jpg"  ></a>
+	</div>
+	<br>
+	<div class="col-md-4">
+		<a href="http://www.robertgoodmanjewelers.com/" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/RGJ_logo.png"  ></a>
+	</div>
+	<br>
+	<div class="col-md-4">
+		<a href="http://www.midwestestatebuyers.com/" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/midwest_estate.jpg"  ></a>
+	</div>
+</div>
+<br>
 	  <br>
 <br>
 <br>
@@ -250,7 +266,7 @@
 <script src="/assets/javascripts/jqBootstrapValidation.js"></script>
 <script src="/assets/javascripts/contact_me.js"></script>
 <script src="/assets/javascripts/plusgallery.js"></script>
-<script src="/assets/javascripts/live.js"></script>
-
+<!--<script src="/assets/javascripts/live.js"></script>
+-->
   </body>
 </html>
