--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -20,6 +20,8 @@
   <link href="/assets/stylesheets/social-buttons.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href="/assets/stylesheets/carousel-fade.css" rel="stylesheet">
+  <link href="/assets/stylesheets/site.css" rel="stylesheet">
+  <link href="/assets/stylesheets/zocial/zocial.css" rel="stylesheet">
 
   <!--- so much depends on jQuery, that we do i here first -->
   <script src="/assets/javascripts/jquery-1.10.2.min.js"></script>
@@ -70,6 +72,10 @@
 		
             <li class=> <a href="/faq.html">FAQ</a></li>
 		
+            <li class=> <a href="/registration.html">Registration</a></li>
+		
+            <li class=> <a href="/sponsors.html">Sponsors</a></li>
+		
             <li class=> <a href="/postings.html">News</a></li>
 		
       </ul>
@@ -80,8 +86,7 @@
 
     <div class="container">
      <!-- Main component for a primary marketing message or call to action -->
-      <div class="row">
-		<h1>Photos from 2013</h1>
+	  <h1>Photos from 2013</h1>
 
 <p><div id="plusgallery" data-type="google" data-album-limit="1000" data-userid="102149140573094062350" data-include="5981524214776040337" data-credit="false"></div>
 <script type="text/javascript">
@@ -94,7 +99,6 @@ $(function(){
 
 <hr />
 
-      </div>
 	  <br>
 <br>
 <br>
@@ -120,7 +124,7 @@ $(function(){
 <script src="/assets/javascripts/jqBootstrapValidation.js"></script>
 <script src="/assets/javascripts/contact_me.js"></script>
 <script src="/assets/javascripts/plusgallery.js"></script>
-<script src="/assets/javascripts/live.js"></script>
-
+<!--<script src="/assets/javascripts/live.js"></script>
+-->
   </body>
 </html>
