--- a/faq.html
+++ b/faq.html
@@ -20,6 +20,8 @@
   <link href="/assets/stylesheets/social-buttons.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href="/assets/stylesheets/carousel-fade.css" rel="stylesheet">
+  <link href="/assets/stylesheets/site.css" rel="stylesheet">
+  <link href="/assets/stylesheets/zocial/zocial.css" rel="stylesheet">
 
   <!--- so much depends on jQuery, that we do i here first -->
   <script src="/assets/javascripts/jquery-1.10.2.min.js"></script>
@@ -70,6 +72,10 @@
 		
             <li class=active> <a href="/faq.html">FAQ</a></li>
 		
+            <li class=> <a href="/registration.html">Registration</a></li>
+		
+            <li class=> <a href="/sponsors.html">Sponsors</a></li>
+		
             <li class=> <a href="/postings.html">News</a></li>
 		
       </ul>
@@ -80,8 +86,7 @@
 
     <div class="container">
      <!-- Main component for a primary marketing message or call to action -->
-      <div class="row">
-		<h3>Q &amp; A — CruZionsville</h3>
+	  <h3>Q &amp; A — CruZionsville</h3>
 
 <hr />
 
@@ -133,7 +138,6 @@
 
 <p><em>Most definitely! We are expecting all kinds of Porsche cars including the 356, 911, Cayman, as well as the Boxster model. The Porsche cars date from the 1950's to the latest 2014 models!</em></p>
 
-      </div>
 	  <br>
 <br>
 <br>
@@ -159,7 +163,7 @@
 <script src="/assets/javascripts/jqBootstrapValidation.js"></script>
 <script src="/assets/javascripts/contact_me.js"></script>
 <script src="/assets/javascripts/plusgallery.js"></script>
-<script src="/assets/javascripts/live.js"></script>
-
+<!--<script src="/assets/javascripts/live.js"></script>
+-->
   </body>
 </html>
