--- a/postings.html
+++ b/postings.html
@@ -20,6 +20,8 @@
   <link href="/assets/stylesheets/social-buttons.css" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href="/assets/stylesheets/carousel-fade.css" rel="stylesheet">
+  <link href="/assets/stylesheets/site.css" rel="stylesheet">
+  <link href="/assets/stylesheets/zocial/zocial.css" rel="stylesheet">
 
   <!--- so much depends on jQuery, that we do i here first -->
   <script src="/assets/javascripts/jquery-1.10.2.min.js"></script>
@@ -70,6 +72,10 @@
 		
             <li class=> <a href="/faq.html">FAQ</a></li>
 		
+            <li class=> <a href="/registration.html">Registration</a></li>
+		
+            <li class=> <a href="/sponsors.html">Sponsors</a></li>
+		
             <li class=active> <a href="/postings.html">News</a></li>
 		
       </ul>
@@ -105,7 +111,7 @@
 <script src="/assets/javascripts/jqBootstrapValidation.js"></script>
 <script src="/assets/javascripts/contact_me.js"></script>
 <script src="/assets/javascripts/plusgallery.js"></script>
-<script src="/assets/javascripts/live.js"></script>
-
+<!--<script src="/assets/javascripts/live.js"></script>
+-->
   </body>
 </html>
