--- a/registration.html
+++ b/registration.html
@@ -72,7 +72,7 @@
 		
             <li class=> <a href="/faq.html">FAQ</a></li>
 		
-            <li class=> <a href="/registration.html">Registration</a></li>
+            <li class=active> <a href="/registration.html">Registration</a></li>
 		
             <li class=> <a href="/sponsors.html">Sponsors</a></li>
 		
@@ -85,10 +85,16 @@
 
 
     <div class="container">
-      <div class="row">
-		<p>Welcome to CruZionsville News!</p>
+     <!-- Main component for a primary marketing message or call to action -->
+	  <h3>Registration</h3>
 
-      </div>
+	  <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
       <br>
 <hr>
 <br>
