- hide sponsors for the moment

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 
 <br>
-<div class="row">
+<!-- <div class="row">
 	<div class="col-md-4">
 		<a href="http://www.discounttire.com/dtcs/home.do" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/discounttire.jpg"  ></a>
 	</div>
@@ -239,7 +239,7 @@
 	<div class="col-md-4">
 		<a href="http://www.midwestestatebuyers.com/" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/midwest_estate.jpg"  ></a>
 	</div>
-</div>
+</div> -->
 <br>
 	  <br>
 <br>
