--- a/sponsors.html
+++ b/sponsors.html
@@ -92,25 +92,27 @@
 
 <hr />
 
-<div class="row" style="vertical-align: middle !important;">
+
+<!-- <div class="row" style="vertical-align: middle !important;">
 	<div class="col-md-6">
 		<a href="http://www.discounttire.com/dtcs/home.do" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/discounttire.jpg"  ></a>
 	</div>
 	<div class="col-md-6">
 		<a href="http://www.midwestestatebuyers.com/" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/midwest_estate.jpg"  ></a>
 	</div>
-</div>
+</div> -->
 
 
 <h3>Media Sponser</h3>
 
 <hr />
 
-<div class="row">
+
+<!-- <div class="row">
 	<div class="col-md-12">
 		<a href="http://www.currentzionsville.com/" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/currentlogo.png"  ></a>
 	</div>
-</div>
+</div> -->
 
 
 
@@ -118,7 +120,9 @@
 
 <hr />
 
-<div class="row">
+
+
+<!-- <div class="row">
 	<div class="col-md-12">
 		<div class="row">
 			<div class="col-md-6">
@@ -188,7 +192,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
 
 
@@ -196,7 +200,9 @@
 
 <hr />
 
-<div class="row">
+
+
+<!-- <div class="row">
 	<div class="col-md-4">
 		<a href="http://www.tomwoodaudiporsche.com/index.htm" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/tomwood_logo.png"  ></a>
 	</div>
@@ -237,7 +243,7 @@
 		<a href="http://falkentire.com/" target="_blank"><img  class="img-responsive center-block"  src="/content/sponsors/FalkenTire2.jpg"  ></a>
 	</div>
 </div>
-<br>
+<br> -->
 	  <br>
 <br>
 <br>
