allow brand image at xs size

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </button>
 
 	  
-      <a class="navbar-brand visible-lg visible-md" style="padding: 5px;" href="#"><img class="img-responsive" src="/content/navbar/cruzionsville-text.png"></a>
+      <a class="navbar-brand visible-lg visible-md visible-xs" style="padding: 5px;" href="#"><img class="img-responsive" src="/content/navbar/cruzionsville-text.png"></a>
       <a class="navbar-brand visible-sm" href="#">CruZionsville</a>
       
 
@@ -261,11 +261,11 @@ The show is from <strong>10:00 am</strong> until <strong>3:00 pm</strong> with t
 <br>
 <div class="row">
 	<div class="col-md-6">
-		<a href="http://www.tomwoodaudiporsche.com/" target="_blank"><img src=/content/sponsors/tomwood_logo.png class=center-block ></a>
+		<a href="http://www.tomwoodaudiporsche.com/" target="_blank"><img src=/content/sponsors/tomwood_logo.png class=img-responsive center-block ></a>
 	</div>
 	<br>
 	<div class="col-md-6">
-		<a href="http://www.sweetcars.com/" target="_blank"><img src=/content/sponsors/sweet_cars.jpg class=center-block ></a>
+		<a href="http://www.sweetcars.com/" target="_blank"><img src=/content/sponsors/sweet_cars.jpg class=img-responsive center-block ></a>
 	</div>
 	<br>
 </div>
