- added time schedule

--- a/faq.html
+++ b/faq.html
@@ -141,6 +141,62 @@
 
 <p><em>The cars will arrive on the brick street by police escort starting at 10:00 am with the official start time of 10:30 am. The program will kick off with the singing of the National Anthem followed by 100 balloons being launched! Come and enjoy the day of activities till 3:00 pm.</em></p>
 
+<table class="table table-bordered table-striped table-responsive">
+<thead>
+<tr class="header">
+<th align="right"><p>Time</p></th>
+<th><p>Event</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right"><p>8:30 - 10 am</p></td>
+<td><p>Cars are staged at The Meadows - 675 S. Ford Road, Zionsville</p></td>
+</tr>
+<tr class="even">
+<td align="right"><p>10 - 10:30 am</p></td>
+<td><p>Porsche Parade into Zionsville with Police Escort</p></td>
+</tr>
+<tr class="odd">
+<td align="right"><p>10:30 am</p></td>
+<td><p>Cub Scout Color Guard Singing of the National Anthem and Balloon release*</p></td>
+</tr>
+<tr class="even">
+<td align="right"><p>10:30 am - 3 pm</p></td>
+<td><p>Porsche cars parked on Main Street</p></td>
+</tr>
+<tr class="odd">
+<td align="right"><p>11:45 am - 1 pm</p></td>
+<td><p>Celebrity, Youth and Porsche Club Judging</p></td>
+</tr>
+<tr class="even">
+<td align="right"><p>1 - 1:30 pm</p></td>
+<td><p>Style Show on Main Street</p></td>
+</tr>
+<tr class="odd">
+<td align="right"><p>1 - 1:45 pm</p></td>
+<td><p>RS Presentation on new book at <a href="http://patrickskitchen.com/">Patrick's/The Brick Street Inn</a></p></td>
+</tr>
+<tr class="even">
+<td align="right"><p>2 pm</p></td>
+<td><p>People's Choice Judging ends</p></td>
+</tr>
+<tr class="odd">
+<td align="right"><p>2:45 - 3 pm</p></td>
+<td><p>CruZionsville Porsche Awards*</p></td>
+</tr>
+<tr class="even">
+<td align="right"><p>3 pm</p></td>
+<td><p>CruZionsville ends on Main Street</p></td>
+</tr>
+<tr class="odd">
+<td align="right"><p>4:45 - 6 pm</p></td>
+<td><p>CruZionsville eReception (location in Zionsville to be finalized)</p></td>
+</tr>
+</tbody>
+</table>
+
+
 <p><strong>Will there be judging?</strong></p>
 
 <p><em>Yes -- it is a shine and show judging event! We have a list of outstanding celebrity judges including Miss Indiana, Ray Cortopassi from Fox News, Lauren Lowrey from WISH TV as well as Kids Judging and of course the People Choice Award for the car that everyone likes the best!</em></p>
@@ -148,6 +204,8 @@
 <p><strong>Will I see different years and models of Porsche cars?</strong></p>
 
 <p><em>Most definitely! We are expecting all kinds of Porsche cars including the 356, 911, Cayman, as well as the Boxster model. The Porsche cars date from the 1950's to the latest 2014 models!</em></p>
+
+<p>* <strong>Event will take place in the town lot at the corner of Main and Hawthorn</strong></p>
 
 
     </div>
