- added "times subject to change" on FAQ

--- a/faq.html
+++ b/faq.html
@@ -147,12 +147,12 @@
 
 <p><strong>What are the times?</strong></p>
 
-<p><em>The cars will arrive on the brick street by police escort starting at 10:00 am with the official start time of 10:30 am. The program will kick off with the singing of the National Anthem followed by 100 balloons being launched! Come and enjoy the day of activities till 3:00 pm.</em></p>
+<p><em>The cars will arrive on the brick street by police escort starting at 10:00 am with the official start time of 10:30 am. The program will kick off with the singing of the National Anthem followed by 100 balloons being launched! Come and enjoy the day of activities till 3:00 pm. </em></p>
 
 <table class="table table-bordered table-striped table-responsive">
 <thead>
 <tr class="header">
-<th align="right"><p>Time</p></th>
+<th align="right"><p>Time*</p></th>
 <th><p>Event</p></th>
 </tr>
 </thead>
@@ -213,7 +213,7 @@
 
 <p><em>Most definitely! We are expecting all kinds of Porsche cars including the 356, 911, Cayman, as well as the Boxster model. The Porsche cars date from the 1950's to the latest 2014 models!</em></p>
 
-<p>* <strong>Event will take place in the town lot at the corner of Main and Hawthorn</strong></p>
+<p>* <strong>Event will take place in the town lot at the corner of Main and Hawthorn. Note: times are subject to change.</strong></p>
 
 
     </div>
