- sponsors and agenda changes

--- a/faq.html
+++ b/faq.html
@@ -91,7 +91,6 @@
 
     <div class="container">
       
-      
 <h3 id="q-a-cruzionsville">Q &amp; A — CruZionsville</h3>
 <hr>
 <p><strong>What is CruZionsville?</strong></p>
@@ -138,12 +137,20 @@
 <td>Porsche Parade into Zionsville with Police Escort</td>
 </tr>
 <tr>
-<td style="text-align:right">10:30 am</td>
+<td style="text-align:right">10:30 am - 10:40 am</td>
 <td>Cub Scout Color Guard Singing of the National Anthem and Balloon release*</td>
 </tr>
 <tr>
 <td style="text-align:right">10:30 am - 3 pm</td>
 <td>Porsche cars parked on Main Street</td>
+</tr>
+<tr>
+<td style="text-align:right">10:45 am - 12:30 pm</td>
+<td>Special Kids program</td>
+</tr>
+<tr>
+<td style="text-align:right">10:45 am - 12:30 pm</td>
+<td>Sullivan Munce Garden Tour</td>
 </tr>
 <tr>
 <td style="text-align:right">11:45 am - 1 pm</td>
@@ -154,12 +161,12 @@
 <td>Style Show on Main Street</td>
 </tr>
 <tr>
-<td style="text-align:right">1 - 1:45 pm</td>
-<td>RS Presentation on new book at <a href="http://patrickskitchen.com/">Patrick&#39;s/The Brick Street Inn</a></td>
-</tr>
-<tr>
 <td style="text-align:right">2 pm</td>
 <td>People&#39;s Choice Judging ends</td>
+</tr>
+<tr>
+<td style="text-align:right">2:30 - 2:45 pm</td>
+<td>Sullivan Munce Museum Painting Awards</td>
 </tr>
 <tr>
 <td style="text-align:right">2:45 - 3 pm</td>
