--- a/sponsors.html
+++ b/sponsors.html
@@ -98,22 +98,71 @@
 
 <br>
 <div class="row">
-	<div class="col-md-6">
-		<a href="http://www.tomwoodaudiporsche.com/index.htm" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block" alt=""/></a>
+	<div class="col-md-4">
+		<a href="http://www.tomwoodaudiporsche.com/index.htm" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block img-responsive" alt=""/></a>
 	</div>
 	<br>
-	<div class="col-md-6">
-		<a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block" alt=""/></a>
+	<div class="col-md-4">
+		<a href="http://www.sweetcars.com/" target="_blank"><img src="/user_assets/images/sponsors/sweet_cars.jpg" class="center-block img-responsive" alt=""/></a>
 	</div>
 	<br>
+  <div class="col-md-4">
+    <a href="http://www.currentzionsville.com/" target="_blank"><img src="/user_assets/images/sponsors/currentlogo.png" class="center-block img-responsive" alt=""/></a>
+  </div>
+  <br>
 </div>
 <br>
-
-<h3> Media Sponser </h3>
+<br>
+<br>
+<br>
+<h3> Program Sponsors </h3>
 <hr>
 
+<div class="row">
+  <div class="col-md-4">
+    <a href="http://www.capturemedia.com/" target="_blank"><img src="/user_assets/images/sponsors/capture_news.jpg" class="center-block img-responsive" alt=""/></a>
+  </div>
+  <br>
+  <div class="col-md-4">
+    <a href="https://www.indyducati.com/" target="_blank"><img src="/user_assets/images/sponsors/ducati.jpg" class="center-block img-responsive" alt=""/></a>
+  </div>
+  <br>
+  <div class="col-md-4">
+    <a href="http://www.hopwoodcellars.com/" target="_blank"><img src="/user_assets/images/sponsors/hopwood3.jpg" class="center-block img-responsive" alt=""/></a>
+  </div>
+  <br>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <a href="http://www.ascseniorcare.com/zionsville-meadows/" target="_blank"><img src="/user_assets/images/sponsors/ZVM_resize.jpg" class="center-block img-responsive" alt=""/></a>
+  </div>
+  <br>
+  <div class="col-md-4">
+    <a href="http://zionsvillemerchants.com/" target="_blank"><img src="/user_assets/images/sponsors/zma3.png" class="center-block img-responsive" alt=""/></a>
+  </div>
+  <br>
+  <div class="col-md-4">
+  </div>
+  <br>
+</div>
 
-      
+<h3> Friends of CruZionsville </h3>
+<hr>
+<div class="row">
+  <ul>
+    <li><a href="http://www.cobblestonegrill.com/"  target="_blank">Cobblestone Grill</a></li>
+    <li><a href="http://ingaspopcorn.com/"  target="_blank">Inga's Popcorn</a></li>
+    <li><a href="http://jonesgreenhouse.com/"  target="_blank">Jones Nursery</a></li>
+    <li><a href="http://sullivanmunce.org/"  target="_blank">Sullivan Munce Museum</a></li>
+  </ul>
+  <br>
+</div>
+
+
+
+
+
+
     </div>
     
 <br>
