--- a/index.html
+++ b/index.html
@@ -203,12 +203,14 @@
 <p>Join Club members, friends and volunteers of the <a href="http://cirpca.org/">Central Indiana Region Porsche Club of America</a> . It will be held on the “Brick Street&quot; in downtown Zionsville, Indiana, Saturday, June 14th. We anticipate having over 125 Porsche cars at our 4th annual event which has been growing over 20% each year. Bring your car, see old friends and meet new ones, listen to music, attend free seminars, shop and don’t miss your chance to bring home a CruZionsville trophy! We have added more great Sponsors this year and these are even more things to see and do. Proceeds go to the <a href="http://www.alz.org/indiana/">Alzheimer&#39;s Organization of Indiana</a>.</p>
 <p>Early bird registration is only $35 per car until April 30th. We will have VIP parking and early bird registration this year at $100 with all proceeds going to the Alzheimer&#39;s Organization. Last year we raised $12,800 and our goal for the 2014 CruZionsville event is to raise $25,000.</p>
 <p>At 10:00 am cars will leave the staging area via Police escort to downtown Zionsville. Our show has gotten so big that we will now be using two blocks along Main Street and two along Pine Street for plenty of room for the cars.</p>
-<p>Its shine and show judging with some really cool new trophies this year. To add to the fun, we have added more judging categories. Bring your car and be a part of the excitement.
-The show is from <strong>10:00 am</strong> until <strong>3:00 pm</strong> with the destination drive starting at <strong>3:15</strong> for Porsche car owners and ending back in Zionsville for a reception starting at <strong>4:30</strong>. We believe the reception will be a great way to share the day’s experiences and catch up with friends!</p>
+<p>Its shine and show judging with some really cool new trophies this year. To add to the fun, we have added more judging categories. Bring your car and be a part of the excitement.<br>The show is from <strong>10:00 am</strong> until <strong>3:00 pm</strong> with the destination drive starting at <strong>3:15</strong> for Porsche car owners and ending back in Zionsville for a reception starting at <strong>4:30</strong>. We believe the reception will be a great way to share the day’s experiences and catch up with friends!</p>
 <p>See you on the “brick street”!</p>
 <p>Motor On</p>
 <p><em>Stephen Tarr</em></p>
 <p><em>2014 CruZionionsville Event Chair</em></p>
+<hr>
+<h3 id="news">NEWS</h3>
+<p>Discounted accommodations are now available <a href="accommodations.html">here.</a></p>
 
 	</div>
 	<div class="col-md-6">
@@ -224,19 +226,19 @@ The show is from <strong>10:00 am</strong> until <strong>3:00 pm</strong> with t
 <h3 id="volunteers-needed-">Volunteers Needed!</h3>
 <p><a href="http://cruzionsville.ivolunteer.com/" target="_blank"><img src="/user_assets/images/buttons/volunteer.jpg" class="" alt="Volunteer Image"/></a></p>
 <p><br></p>
-<p><a href="http://www.facebook.com/sharer/sharer.php?u=https://www.cruzionsville.com" class="zocial facebook">Share on Facebook</a><br><br>
-<a href="https://plus.google.com/share?url=https://www.cruzionsville.com" class="zocial googleplus">Share on Google+</a><br><br>
-<a href="http://twitter.com/home?status=https://www.cruzionsville.com" class="zocial twitter">Share on Twitter</a><br><br></p>
+<p><a href="http://www.facebook.com/sharer/sharer.php?u=https://www.cruzionsville.com" class="zocial facebook">Share on Facebook</a><br><br><br><a href="https://plus.google.com/share?url=https://www.cruzionsville.com" class="zocial googleplus">Share on Google+</a><br><br><br><a href="http://twitter.com/home?status=https://www.cruzionsville.com" class="zocial twitter">Share on Twitter</a><br><br></p>
 <p>Get involved with CruZionsville!</p>
 
 		</div>
+  </div>
 </div>
 
-<h3 id="title-sponsers">Title Sponsers</h3>
-<hr>
 
 <br>
 <div class="row">
+  <h3 id="title-sponsers">Title Sponsers</h3>
+<hr>
+
 	<div class="col-md-6">
 		<a href="http://www.tomwoodaudiporsche.com" target="_blank"><img src="/user_assets/images/sponsors/tomwood_logo.png" class="center-block" alt=""/></a>
 	</div>
@@ -264,5 +266,10 @@ The show is from <strong>10:00 am</strong> until <strong>3:00 pm</strong> with t
 
 
     
+    <script type="text/javascript">
+      $(document.links).filter(function() {
+        return this.hostname != window.location.hostname;
+      }).attr('target', '_blank');
+    </script>
   </body>
 </html>
