--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -120,5 +120,10 @@ $(function(){
 
 
     
+    <script type="text/javascript">
+      $(document.links).filter(function() {
+        return this.hostname != window.location.hostname;
+      }).attr('target', '_blank');
+    </script>
   </body>
 </html>
