--- a/404.html
+++ b/404.html
@@ -118,5 +118,10 @@
 
 
     
+    <script type="text/javascript">
+      $(document.links).filter(function() {
+        return this.hostname != window.location.hostname;
+      }).attr('target', '_blank');
+    </script>
   </body>
 </html>
