--- a/accommodations.html
+++ b/accommodations.html
@@ -92,7 +92,9 @@
     <div class="container">
       
 <h3 id="accommodations">Accommodations</h3>
-<p>Details coming soon......</p>
+<p><a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/INDZVHX-CRZ-20140613/index.jhtml?WT.mc_id=POG"><img src="user_assets/images/hampton_inn_logo.gif"></a></p>
+<p>Click <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/INDZVHX-CRZ-20140613/index.jhtml?WT.mc_id=POG">here, to get to the CruZionsville Group Web Page</a> reservation site for the Hampton Inn.</p>
+<p>A block of rooms have been reserved for June 13, 2014 - June 15, 2014. The special room rate will be available until June 9th or until the group block is sold-out, whichever comes first.</p>
 
 
     </div>
@@ -111,5 +113,10 @@
 
 
     
+    <script type="text/javascript">
+      $(document.links).filter(function() {
+        return this.hostname != window.location.hostname;
+      }).attr('target', '_blank');
+    </script>
   </body>
 </html>
