--- a/registration.html
+++ b/registration.html
@@ -110,5 +110,10 @@
 
 
     
+    <script type="text/javascript">
+      $(document.links).filter(function() {
+        return this.hostname != window.location.hostname;
+      }).attr('target', '_blank');
+    </script>
   </body>
 </html>
