--- a/registration.html
+++ b/registration.html
@@ -17,7 +17,6 @@
  <!-- Custom styles for this template -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css" />
 
-
   <link href="/assets/stylesheets/site.css" rel="stylesheet" type="text/css" />
 
   <!-- Just for debugging purposes. Don't actually copy this line! -->
@@ -92,7 +91,9 @@
     <div class="container">
       
 <h3 id="registration">Registration</h3>
-<div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/e/cruzionsville-2014-tickets-9612349797?ref=eweb" frameborder="0" height="1000" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/eweb">Event registration</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.com/e/cruzionsville-2014-tickets-9612349797?ref=eweb">CruZionsville 2014</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=eweb">Eventbrite</a></div></div>
+<div class="row"><br>    <div class="col-md-3"><br>        <iframe src="https://www.eventbrite.com/countdown-widget?eid=9612349797" frameborder="0" height="349"
+                width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe><br>    </div><br>    <div class="col-md-9"><br>        <a href="https://www.eventbrite.com/e/cruzionsville-2014-tickets-9612349797?ref=ebtn" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=9612349797" alt="Eventbrite - CruZionsville 2014" /></a><br>        <br><br>        <h1>Event Details </h1><br>        <p>Join Club members, friends and volunteers of the Central Indiana Region Porsche Club of America . It will be held on the “Brick Street&quot; in downtown Zionsville, Indiana, Saturday, June 14th. We anticipate having over 125 Porsche cars at our 4th annual event which has been growing over 20% each year. Bring your car, see old friends and meet new ones, listen to music, attend free seminars, shop and don’t miss your chance to bring home a CruZionsville trophy! We have added more great Sponsors this year and these are even more things to see and do. Proceeds go to the Alzheimer&#39;s Organization of Indiana.</p><br>        <p>Early bird registration is only $35 per car until April 30th. We will have VIP parking and early bird registration this year at $100 with all proceeds going to the Alzheimer&#39;s Organization. Last year we raised $12,800 and our goal for the 2014 CruZionsville event is to raise $25,000.</p><br>        <p>At 10:00 am cars will leave the staging area via Police escort to downtown Zionsville. Our show has gotten so big that we will now be using two blocks along Main Street and two along Pine Street for plenty of room for the cars. Its shine and show judging with some really cool new trophies this year. To add to the fun, we have added more judging categories. Bring your car and be a part of the excitement. The show is from 10:00 am until 3:00 pm with the destination drive starting at 3:15 for Porsche car owners and ending back in Zionsville for a reception starting at 4:30. We believe the reception will be a great way to share the day’s experiences and catch up with friends!</p><br>        <p>See you on the “brick street”!<br>        Motor On<br>        Stephen Tarr<br>        2014 CruZionionsville Event Chair</p><br>    </div><br></div>
+
 
     </div>
     
