--- a/summaries.html
+++ b/summaries.html
@@ -17,7 +17,6 @@
  <!-- Custom styles for this template -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css" />
 
-
   <link href="/assets/stylesheets/site.css" rel="stylesheet" type="text/css" />
 
   <!-- Just for debugging purposes. Don't actually copy this line! -->
@@ -97,7 +96,8 @@
 
 <!-- BEGIN: Underscore Template Definition. -->
 <script type="text/template" class="template">
-	<% var tagOrCategory = (rc.currentTag != null && rc.currentTag != undefined) ? rc.currentTag : ((rc.currentCategory != null && rc.currentCategory != undefined) ? rc.currentCategory : "All"); %>
+
+	<% var tagOrCategory = (rc.currentTag != null && rc.currentTag != undefined) ? rc.currentTag : ((rc.currentCategory != null && rc.currentCategory != undefined) ? rc.currentCategory : "Recent Posts"); %>
 
 	<h2><%-tagOrCategory%></h2>
 	<%
@@ -135,6 +135,9 @@
 <!-- END: Underscore Template Definition. -->
 
  <script type="text/javascript">
+  // var $ = require('jquery');
+	// var $ = require('lodash');
+
  $(function(){
     //DOM loaded
 
